--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,4 +1,4 @@
-.gpt3__navbar {
+.sum__navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -6,36 +6,47 @@
     padding: 2rem 6rem;
 }
 
-.gpt3__navbar-links {
+.sum__navbar-links {
     flex: 1;
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
 
-.gpt3__navbar-links_logo {
+.sum__navbar-links_logo {
     margin-right: 2rem;
 }
 
-.gpt3__navbar-links_logo img {
+.sum__navbar-links_logo img {
     width: 62px;
     height: 16px;
 }
 
-.gpt3__navbar-links_container {
+.sum__navbar-links_logo h1 {
+    color: #fff;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 25px;
+    text-transform: capitalize;
+
+    margin: 0;
+}
+
+.sum__navbar-links_container {
     display: flex;
     flex-direction: row;
 }
 
-.gpt3__navbar-sign {
+.sum__navbar-sign {
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
 
-.gpt3__navbar-links_container p,
-.gpt3__navbar-sign p,
-.gpt3__navbar-menu_container p {
+.sum__navbar-links_container p,
+.sum__navbar-sign p,
+.sum__navbar-menu_container p {
     color: #fff;
     font-family: var(--font-family);
     font-weight: 500;
@@ -47,8 +58,8 @@
     cursor: pointer;
 }
 
-.gpt3__navbar-sign button,
-.gpt3__navbar-menu_container button {
+.sum__navbar-sign button,
+.sum__navbar-menu_container button {
     padding: 0.5rem 1rem;
     left: 1153px;
     top: 55px;
@@ -63,4 +74,78 @@
     outline: none;
     cursor: pointer;
 
+}
+
+.sum__navbar-menu {
+    margin-left: 1rem;
+
+    display: none;
+    position: relative;
+}
+
+.sum__navbar-menu svg {
+    cursor: pointer;
+}
+
+.sum__navbar-menu_container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+
+    text-align: end;
+    background: var(--color-footer);
+    padding: 2rem;
+    position: absolute;
+    top: 40px;
+    right: 0;
+    margin-top: 1rem;
+    min-width: 210px;
+    border-radius: 5px;
+    box-shadow: 0 0 5 rgba(0, 0, 0, 0.2);
+}
+
+.sum__navbar-menu_container p {
+    margin: 1rem 0;
+}
+
+.sum__navbar-menu_container-links-sign {
+    display: none;
+}
+
+/*tablet*/
+@media screen and (max-width: 1050px) {
+    .sum__navbar-links_container {
+        display: none;
+    }
+
+    .sum__navbar-menu {
+        display: flex;
+    }
+}
+
+
+@media screen and (max-width: 700px) {
+    .sum__navbar {
+        padding: 2rem 4rem;
+    }
+}
+
+/*mobile*/
+@media screen and (max-width: 500px) {
+    .sum__navbar {
+        padding: 2rem;
+    }
+
+    .sum__navbar-sign {
+        display: none;
+    }
+
+    .sum__navbar-menu_container {
+        top: 20px;
+    }
+
+    .sum__navbar-menu_container-links-sign {
+        display: block;
+    }
 }
